--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "firebase": "^9.17.1",
     "vue": "^3.2.13",
+    "vue-meta": "^2.4.0",
     "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.5",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
